<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorPrimaryLight">

    <LinearLayout
        android:layout_width="@dimen/_120sdp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/message_menu_delete"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                app:srcCompat="@drawable/ic_delete"
                app:tint="@color/text_color_3" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/delete"
                android:textColor="@color/text_color_1"
                android:textSize="@dimen/_14ssp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/message_menu_copy"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                app:srcCompat="@drawable/ic_copy"
                app:tint="@color/text_color_3" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/copy"
                android:textColor="@color/text_color_1"
                android:textSize="@dimen/_14ssp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/message_menu_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                app:srcCompat="@drawable/ic_edit"
                app:tint="@color/text_color_3" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/edit"
                android:textColor="@color/text_color_1"
                android:textSize="@dimen/_14ssp" />

        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>